Melhoria no footer_page

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <!-- <p><strong>ASIDE</strong>: É uma seção que engloba conteúdos relacionados ao conteúdo principal, como artigos relacionados, biografia do autor e publicidade. Normalmente são representadas como barras laterais.</p> -->
     </aside>
 
-    <footer>
-        <h4>Nossos Contatos</h4>
+    <footer class="footer_page">
+        <h4>Nossos contatos</h4>
         <ul class="contact_list">
             <li>
                 <a href="tel:+5585989647993" target="_blank">Telefone</a>
@@ -70,6 +70,8 @@
             </li>
         </ul>
         <!-- <p><strong>FOOTER</strong>: Esse elemento representa o rodapé do conteúdo ou de parte dele, pois ele é aceito dentro de vários elementos, como article e section e até do body. Exemplos de conteúdo de um 'footer' são informações de autor e links relacionados.</p> -->
+        <!-- Importando mapa do Google -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.8385217181981!2d-38.580048905543464!3d-3.7190151706212333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74a3caee51273%3A0x3bdd268da6c70d05!2sEspetinho%20Da%20Esquina%20-%20O%20melhor%20da%20Regi%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1621101664212!5m2!1spt-BR!2sbr" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
     </footer>
     <script src="./assets/script/app.js"></script>
 </body>
