Ajuste do espaçamento do article

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="https://github.com/davidtmasin" target="_blank">Linkedin</a>
             </li>
             <li>
-                <a href="mailto:davidteixeira.info@gmail.com" target="_blank">Email</a>
+                <a href="mailto:omerlhordaregiao@gmail.com" target="_blank">Email</a>
             </li>
         </ul>
         <!-- <p><strong>FOOTER</strong>: Esse elemento representa o rodapé do conteúdo ou de parte dele, pois ele é aceito dentro de vários elementos, como article e section e até do body. Exemplos de conteúdo de um 'footer' são informações de autor e links relacionados.</p> -->
