Ajuste no ícones de contatos

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <i class="fas fa-band-aid"></i>
 <i class="fas fa-cat"></i>
     <header>
-        <img src="./assets/img/omelhordaregião.jpg" alt="Logo do espetinho da esquina" class="photo">
+        <img src="./assets/img/omelhordaregião.jpg" alt="Logo do espetinho da esquina" class="photo" title ="O melhor da região">
         <h1 id="title">O melhor da região</h1>
-        <p class="insta_title"><a href="https://www.instagram.com/o_melhor_da_regiao/" target="_blank" title="Acompanhe a gente no Insta">@o_melhor_da_regiao</a></p>    
+        <p class="insta_title"><a href="https://rcadelivery.com.br/omerlhordaregiaogmailcom" target="_blank" title="Faça agora o seu pedido">@o_melhor_da_regiao</a></p>    
         <!-- <p><strong>HEADER</strong>: É o cabeçalho da página ou de uma seção da página e normalmente contém logotipos, menus, campos de busca.</p>         -->
     </header>
 
@@ -56,22 +56,37 @@
         <h4>Nossos Contatos</h4>
         <ul class="contact_list">
             <li>
-                <a href="tel:+5585987977189" target="_blank"><i class="fab fa-whatsapp" style="color:#34af23;"></i> Whatsapp</a>
+                <a href="https://api.whatsapp.com/send?phone=5585987977189&text=Ol%C3%A1%2C%20gostaria%20de%20ver%20o%20card%C3%A1pio." target="_blank"  title="Whatsapp">
+                    <i class="fab fa-whatsapp" style="color:#34af23;"></i>
+                    <!-- <p>Whatsapp</p> -->
+                </a>
             </li>
             <li>
-                <a href="https://www.facebook.com/omelhordaregiaovem/" target="_blank"><i class="fab fa-facebook" style="color:#3b5998;"></i> Facebook</a>
+                <a href="https://www.facebook.com/omelhordaregiaovem/" target="_blank" title="Facebook">
+                    <i class="fab fa-facebook" style="color:#3b5998;"></i>
+                    <!-- <p>Facebook</p> -->
+                </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/o_melhor_da_regiao" target="_blank"><i class="fab fa-instagram-square" style="color:#517fa4;"></i> Instagram</a>
+                <a href="https://www.instagram.com/o_melhor_da_regiao" target="_blank" title="Instagram">
+                    <i class="fab fa-instagram" style="color:#517fa4;"></i>
+                    <!-- <p>Instagram</p> -->
+                </a>
             </li>
             <li>
-                <a href="mailto:omerlhordaregiao@gmail.com" target="_blank"><i class="fas fa-envelope" style="color:#da4d39;"></i> Email</a>
+                <a href="mailto:omerlhordaregiao@gmail.com" target="_blank" title="E-mail">
+                    <i class="fas fa-envelope" style="color:#da4d39;"></i> 
+                    <!-- <p>Email</p> -->
+                </a>
             </li>
         </ul>
         
         <!-- <p><strong>FOOTER</strong>: Esse elemento representa o rodapé do conteúdo ou de parte dele, pois ele é aceito dentro de vários elementos, como article e section e até do body. Exemplos de conteúdo de um 'footer' são informações de autor e links relacionados.</p> -->
         <!-- Importando mapa do Google -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.8385217181981!2d-38.580048905543464!3d-3.7190151706212333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74a3caee51273%3A0x3bdd268da6c70d05!2sEspetinho%20Da%20Esquina%20-%20O%20melhor%20da%20Regi%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1621101664212!5m2!1spt-BR!2sbr" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
+        <p class="footer_text">O melhor lugar para você e sua família! Aqui você encontra: qualidade e preço justo!</p>
+        <p class="footer_text">Funcionamos das 10h às 22h.</p>
+        <p class="footer_text">Agradecemos a sua preferência!</p>
     </footer>
     <script src="./assets/script/app.js"></script>
 </body>
