--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="./assets/img/omelhordaregião.jpg" alt="Logo do espetinho da esquina" class="photo" title ="O melhor da região">
-        <h1 id="title">O melhor da região</h1>
+        <h1 id="title">Espetinho da Esquina</h1>
         <p class="insta_title"><a href="https://rcadelivery.com.br/omerlhordaregiaogmailcom" target="_blank" title="Faça agora o seu pedido">@o_melhor_da_regiao</a></p>    
         <!-- <p><strong>HEADER</strong>: É o cabeçalho da página ou de uma seção da página e normalmente contém logotipos, menus, campos de busca.</p>         -->
     </header>
@@ -51,7 +51,10 @@
     </aside>
 
     <footer class="footer_page">
-        <h4>Nossos Contatos</h4>
+        <h4>Funcionamento</h4>
+        <p style="font-size: 1.25rem; margin: 5px 5px 10px 5px;">Nosso horário de funcionamento é das 10h30 às 23h30, de terça a sábado, e das 10h às 15h, aos domingos.</p>
+
+        <h4>Entre em contato</h4>
         <ul class="contact_list">
             <li>
                 <a href="https://api.whatsapp.com/send?phone=5585987977189&text=Ol%C3%A1%2C%20gostaria%20de%20ver%20o%20card%C3%A1pio." target="_blank"  title="Whatsapp">
@@ -80,10 +83,10 @@
         </ul>
         
         <!-- <p><strong>FOOTER</strong>: Esse elemento representa o rodapé do conteúdo ou de parte dele, pois ele é aceito dentro de vários elementos, como article e section e até do body. Exemplos de conteúdo de um 'footer' são informações de autor e links relacionados.</p> -->
+            
         <!-- Importando mapa do Google -->
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.8385217181981!2d-38.580048905543464!3d-3.7190151706212333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c74a3caee51273%3A0x3bdd268da6c70d05!2sEspetinho%20Da%20Esquina%20-%20O%20melhor%20da%20Regi%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1621101664212!5m2!1spt-BR!2sbr" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
         <p class="footer_text">O melhor lugar para você e sua família! Aqui você encontra: qualidade e preço justo!</p>
-        <p class="footer_text">Funcionamos das 10h às 22h.</p>
         <p class="footer_text">Agradecemos a sua preferência!</p>
     </footer>
     <script src="./assets/script/app.js"></script>
