Ajustes de layout 2

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <p class="footer_text">O melhor lugar para você e sua família! Aqui você encontra: qualidade e preço justo!</p>
         <p class="footer_text">Agradecemos a sua preferência!</p>
     </footer>
+    <p id="copyright">Desenvolvido por David Teixeira. Este website é um projeto educacional que foi inspirado em uma empresa real, o Espetinho da Esquina: O melhor da região.</p>
     <script src="./assets/script/app.js"></script>
 </body>
 </html>
