Ajustes de layout 7

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="./assets/img/omelhordaregião.jpg" alt="Logo do espetinho da esquina" class="photo" title ="O melhor da região">
-        <h1 id="title">Espetinho da Esquina</h1>
+        <h1 id="title"><a href="#contact">Espetinho da Esquina</a></h1>
         <p class="insta_title"><a href="https://rcadelivery.com.br/omerlhordaregiaogmailcom" target="_blank" title="Faça agora o seu pedido">@o_melhor_da_regiao</a></p>    
         <!-- <p><strong>HEADER</strong>: É o cabeçalho da página ou de uma seção da página e normalmente contém logotipos, menus, campos de busca.</p>         -->
     </header>
@@ -50,7 +50,7 @@
         <!-- <p><strong>ASIDE</strong>: É uma seção que engloba conteúdos relacionados ao conteúdo principal, como artigos relacionados, biografia do autor e publicidade. Normalmente são representadas como barras laterais.</p> -->
     </aside>
 
-    <footer class="footer_page">
+    <footer class="footer_page" id="contact">
         <h4>Funcionamento</h4>
         <p style="font-size: 1.25rem; margin: 5px 5px 10px 5px;">Nosso horário de funcionamento é das 10h30 às 23h30, de terça a sábado, e das 10h às 15h, aos domingos.</p>
 
@@ -90,6 +90,7 @@
         <p class="footer_text">Agradecemos a sua preferência!</p>
     </footer>
     <p id="copyright">Desenvolvido por David Teixeira. Este website é um projeto educacional que foi inspirado em uma empresa real, o Espetinho da Esquina: O melhor da região.</p>
+    <div id="go_back"><a href="#">Topo  <i class="fas fa-arrow-up"></i></a></div>
     <script src="./assets/script/app.js"></script>
 </body>
 </html>
