Correção do link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="./assets/img/omelhordaregião.jpg" alt="Logo do espetinho da esquina" class="photo" title ="O melhor da região">
-        <h1 id="title"><a href="#contact">Espetinho da Esquina</a></h1>
+        <h1 id="title">Espetinho da Esquina</h1>
         <p class="insta_title"><a href="https://rcadelivery.com.br/omerlhordaregiaogmailcom" target="_blank" title="Faça agora o seu pedido">@o_melhor_da_regiao</a></p>    
         <!-- <p><strong>HEADER</strong>: É o cabeçalho da página ou de uma seção da página e normalmente contém logotipos, menus, campos de busca.</p>         -->
     </header>
