Correção do link 2

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- <p><strong>ASIDE</strong>: É uma seção que engloba conteúdos relacionados ao conteúdo principal, como artigos relacionados, biografia do autor e publicidade. Normalmente são representadas como barras laterais.</p> -->
     </aside>
 
-    <footer class="footer_page" id="contact">
+    <footer class="footer_page">
         <h4>Funcionamento</h4>
         <p style="font-size: 1.25rem; margin: 5px 5px 10px 5px;">Nosso horário de funcionamento é das 10h30 às 23h30, de terça a sábado, e das 10h às 15h, aos domingos.</p>
 
